unificação de códigos e busca local

--- a/index.html
+++ b/index.html
@@ -210,6 +210,10 @@
 						<p class="text-justify"><strong>Obs:</strong> Para acompanhar cada detalhe do que foi feito, visite o <a href="https://github.com/gAldeia/gAldeia.github.io">GitHub</a>. O repositório é sempre atualizado ao mesmo tempo que este quadro de updates.</p>
 					</div>
 
+					<p class="text-justify"><b>03/11/2017</b></p>
+					<p class="text-justify"> - Progresso na unificação das classes dos códigos.</p>
+					<p class="text-justify"> - novo IT-LS faz busca local nos operadores (faltam os expoentes).</p>
+
 					<p class="text-justify"><b>01/11/2017</b></p>
 					<p class="text-justify"> - Revisão do código da página, do IT-LS e do SymTree.</p>
 					<p class="text-justify"> - Critério de parada para regressão linear nos dois algoritmos.</p>
