controle de termos repetidos em expressões

--- a/index.html
+++ b/index.html
@@ -210,6 +210,9 @@
 						<p class="text-justify"><strong>Obs:</strong> Para acompanhar cada detalhe do que foi feito, visite o <a href="https://github.com/gAldeia/gAldeia.github.io">GitHub</a>. O repositório é sempre atualizado ao mesmo tempo que este quadro de updates.</p>
 					</div>
 
+					<p class="text-justify"><b>06/11/2017</b></p>
+					<p class="text-justify"> - Controle para evitar termos repetidos em expressões.</p>
+
 					<p class="text-justify"><b>05/11/2017</b></p>
 					<p class="text-justify"> - Busca local agora percorre também expoentes.</p>
 					<p class="text-justify"> - Início da implementação do IT-ES.</p>
