implementação do ITES

--- a/index.html
+++ b/index.html
@@ -139,7 +139,10 @@
 				<div class="page-header">
 					<h2>Entrada de dados</h2>
 
-					<p class="text-justify">Digite os dados aqui ou carregue um arquivo do seu computador:</p>
+					<p class="text-justify"></p>
+
+					<p class="text-justify">Digite os dados aqui ou carregue um arquivo do seu computador (<a target="_blank" href="./examples.html">conjunto de dados de testes</a>):</p>
+
 					<div class="row">
 							<div class="col-lg-6">
 								<h4>Entrada manual de dados</h4>
@@ -209,6 +212,10 @@
 					<div class="alert alert-info">
 						<p class="text-justify"><strong>Obs:</strong> Para acompanhar cada detalhe do que foi feito, visite o <a href="https://github.com/gAldeia/gAldeia.github.io">GitHub</a>. O repositório é sempre atualizado ao mesmo tempo que este quadro de updates.</p>
 					</div>
+
+					<p class="text-justify"><b>08/11/2017</b></p>
+					<p class="text-justify"> - IT-ES implementado.</p>
+					<p class="text-justify"> - Nova página com alguns dados para testes.</p>
 
 					<p class="text-justify"><b>06/11/2017</b></p>
 					<p class="text-justify"> - Controle para evitar termos repetidos em expressões.</p>
