--- a/examples.html
+++ b/examples.html
@@ -10,7 +10,7 @@
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
-	<title>Analisador: Giroscópio</title>
+	<title>Regressão Simbólica - entradas de teste</title>
 
 	<style>
 		canvas {
