--- a/index.html
+++ b/index.html
@@ -216,6 +216,10 @@
 						<p class="text-justify"><strong>Obs:</strong> Para acompanhar cada detalhe do que foi feito, visite o <a href="https://github.com/gAldeia/gAldeia.github.io">GitHub</a>. O repositório é sempre atualizado ao mesmo tempo que este quadro de updates.</p>
 					</div>
 
+					<p class="text-justify"><b>11/11/2017</b></p>
+					<p class="text-justify"> - Opção de ruído nos dados do gerador.</p>
+					<p class="text-justify"> - IT-ES usa agora o construtor na mutação para evitar alguns problemas de referência de variáveis que estava tendo com o JS.</p>
+					
 					<p class="text-justify"><b>09/11/2017</b></p>
 					<p class="text-justify"> - Gerador de dados simples na página de exemplos.</p>
 
