controle da entrada do usuario

--- a/feedback.html
+++ b/feedback.html
@@ -10,7 +10,7 @@
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
-	<title>Regressão Simbólica - Registro de updates</title>
+	<title>Regressão Simbólica - Feedback</title>
 
 	<style>
         *{
