correção de erros

--- a/changelog.html
+++ b/changelog.html
@@ -111,6 +111,11 @@
                 <p class="text-justify"><strong>Obs:</strong> Para acompanhar cada detalhe do que foi feito, visite o <a href="https://github.com/gAldeia/gAldeia.github.io">GitHub</a>. O repositório é sempre atualizado ao mesmo tempo que este quadro de updates.</p>
             </div>
 
+            <p class="text-justify"><b>24/11/2017</b></p>
+            <p class="text-justify"> - Correção na atribuição de rótulos das colunas de entrada.</p>
+            <p class="text-justify"> - Controle da entrada na função exponencial, eliminando os casos de NaN.</p>
+            <p class="text-justify"> - Correção num erro no cálculo dos coeficientes, onde o algoritmo parava de funcionar.</p>
+
             <p class="text-justify"><b>23/11/2017</b></p>
             <p class="text-justify"> - Rótulos das colunas de entrada.</p>
             <p class="text-justify"> - Entrada invertida, agora é x1, x2, ... y. (falta aplicar a modificação em todo texto que explica como inserir a entrada e em todas as tabelas/gerador)</p>
