--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                     <div class="col-lg-6">
                         <h4>Entrada manual de dados</h4>
                         
-                        <textarea style="max-width: 100%; min-width:100%" class="form-control" rows="3" placeholder="Digite os dados aqui. Um ponto em cada linha, no seguinte esquema: f(x1, x2, ... xn), x1, x2, ..., xn. Os números podem ser separados por vírgulas ou espaços." id="my-manualinput"></textarea>
+                        <textarea style="max-width: 100%; min-width:100%" class="form-control" rows="3" placeholder="Digite os dados aqui. Um ponto em cada linha, separados por vírgulas, espaços ou tabulações" id="my-manualinput"></textarea>
                     </div>
 
                     <div class="col-lg-6">
