--- a/study-notes.html
+++ b/study-notes.html
@@ -28,14 +28,11 @@
             min-height: calc(100% - 70px);
             margin-top: 38px;
             padding-top: 50px;
-            margin-left: 100px;
             position: fixed;
         }
         section#bodyContent{
-            position: absolute;
-            min-width: calc(100% - 480px);
-            max-width: calc(100% - 480px);
-            margin-left: 380px;
+            position: relative;
+            margin-left: 280px;
             margin-top: 70px;
         }
         section#sideMenu nav a.active{
