--- a/feedback.html
+++ b/feedback.html
@@ -82,7 +82,7 @@
         </div><!--container-->
     </nav><!--navbar-->
 
-<body class="body body-background">
+<body class="body body-background container">
 
     <section id="sideMenu" class="well">
         <p>Aqui estão listadas todas as páginas do site:</p>
